# Teeworlds-MMOTee

./: .autoexec.cfg.swp  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Readme.md  autoexec.cfg  autoexec.cfg.example  bam.lua  build.sh  mmo_sql  mmotee.service  mrpg.sql  template-cn.sql  template.sql  tutorial.md
.github/workflows/: cmake.yml
cmake/: FindICU.cmake  FindMySQL.cmake  FindOpenSSL.cmake  FindZLIB.cmake
data/languages/: ar.json  bg.json  cs.json  de.json  el.json  es.json  fa.json  fr.json  hr.json  hu.json  index.json  it.json  ja.json  la.json  nl.json  pl.json  pt.json  ru.json  sah.json  sr-Latn.json  tl.json  tr.json  uk.json  zh-Hans.json  zh.json
data/maps/: infc_bamboo2.cfg  infc_bamboo3.map  infc_canyon.cfg  infc_canyon.map  infc_damascus.map  infc_floatingislands.cfg  infc_floatingislands.map  infc_hardcorepit.cfg  infc_headquarter.cfg  infc_headquarter.map  infc_k9f_small.cfg  infc_k9f_small.map  infc_lunaroutpost.cfg  infc_malinalli_k9f.cfg  infc_malinalli_k9f.map  infc_newdust.cfg  infc_newdust.map  infc_sewers.cfg  infc_skull.map  infc_skull_winter.cfg  infc_skull_winter.map  infc_spacelab.cfg  infc_spacelab.map  infc_toilet.cfg  infc_toilet_v2.cfg  infc_toilet_v2.map  infc_towers.cfg  infc_towers.map  infc_warehouse.map  infc_warehouse2.cfg  infc_warehouse2.map  infc_warehouse_winter.map
maps/: 1-250-v0.1.map  1-250-v1.map  1-250-v10.map  1-250-v11.map  1-250-v12.1.map  1-250-v12.map  1-250-v13.map  1-250-v14.map  1-250-v15.map  1-250-v16.map  1-250-v17.map  1-250-v18-F.map  1-250-v18.2.map  1-250-v18.3.map  1-250-v18.4.map  1-250-v18.5.map  1-250-v18.6.map  1-250-v18.7.map  1-250-v18.8.map  1-250-v18.9.map  1-250-v18.map  1-250-v19.2.map  1-250-v19.3.map  1-250-v19.4.map  1-250-v19.5.map  1-250-v19.6.map  1-250-v19.7.map  1-250-v2.map  1-250-v3.map  1-250-v4.map  1-250-v5.map  1-250-v6.1.map  1-250-v6.map  1-250-v7.map  1-250-v9.map  1-250.map  250-500.map
scripts/: wordlist.py
server_lang/: README.txt  index.json
src/base/: math.cpp  math.h  system.c  system.h  vmath.h
src/engine/: masterserver.h  server.h
src/engine/server/: .goutputstream-23ROIZ  crypt.cpp  crypt.h  mapconverter.cpp  mapconverter.h  register.cpp  server.cpp  server.h  sql_connector.cpp  sql_connector.h  sql_job.cpp  sql_job.h  sql_server.cpp  sql_server.h  sql_string_helpers.h
src/engine/shared/: config_variables.h  console.cpp  console.h  datafile.cpp  demo.cpp  econ.cpp  econ.h  engine.cpp  jobs.cpp  jobs.h  memheap.cpp  netban.cpp  netban.h  network.h  network_client.cpp  network_conn.cpp  network_console_conn.cpp  network_server.cpp  protocol.h  ringbuffer.h  snapshot.cpp  snapshot.h  websockets.cpp
src/game/: animation.cpp  collision.cpp  collision.h  gamecore.cpp  gamecore.h  layers.cpp  mapitems.h  tuning.h  variables.h  version.h  voting.h
src/game/server/: classes.h  cmds.cpp  cmds.h  entity.h  gamecontext.cpp  gamecontext.cpp.backup  gamecontext.cpp.backup.xz  gamecontext.h  gamecontroller.cpp  gamecontroller.h  gameworld.cpp  gameworld.h  player.cpp  player.h
src/game/server/entities/: biologist-laser.cpp  biologist-laser.h  biologist-mine.cpp  biologist-mine.h  bouncing-bullet.cpp  bouncing-bullet.h  character.cpp  character.h  flyingpoint.cpp  flyingpoint.h  healer-health.cpp  healer-health.h  hearth.cpp  hearth.h  hero-flag.cpp  hero-flag.h  loltext.cpp  loltext.h  photoid.cpp  photoid.h  projectile.cpp  server-tutorial.md  slug-slime.cpp  snapfullpickup.cpp  snapfullpickup.h  snapfullproj.cpp  snapfullproj.h
src/game/server/entities/bots/: boomer.cpp  boomer.h  bosscleaner.cpp  bosscleaner.h  bossslime.cpp  bossslime.h  farmer.cpp  farmer.h  kwah.cpp  kwah.h  monster.cpp  npcs.cpp  npcs.h  npcsw.cpp  npcsw.h
src/game/server/entities/buffs/: buff.cpp  buff.h
src/game/server/entities/drawing/: info.cpp  info.h
src/game/server/entities/items/: bonus.cpp  bonus.h  dropitem.cpp  dropitem.h  moneybag.cpp  moneybag.h  pickup.cpp  pickup.h
src/game/server/entities/mobs/: feya.cpp  feya.h
src/game/server/entities/sword/: pizdamet.cpp  pizdamet.h  sword.cpp  sword.h
src/game/server/gamemodes/: mod.cpp  mod.h
src/teeuniverses/components/: localization.cpp
src/teeuniverses/system/: string.h
src/tools/: crapnet.cpp
src/versionsrv/: versionsrv.cpp
ubuntu/: Dockerfile  build.sh
